= 1.7.5 - xx-xx-2021 =
* Feature - Divider field added.
* Feature - User capabilities added.
* Enhancement - Enable or Disable logs.
* Enhancement - Row clone option added.
* Fix - Mobile container margin issue.
* Fix - PayPal standard Redirection Issue.
* Fix - Form Field deletion with delete button.
* Fix - CSV textarea contents line break issue.
* Fix - Signature field display with smart tags.
* Fix - Welcome page redirection on every plugin updates.
* Fix - New Email Notifications not being saved on reload.
* Fix - New Email Notifications cloned blank for assigned values.
* Fix - During Form restore set the status to Publish instead of Draft.
* Fix - Empty checkboxes value in view entry form details.
* Fix - Stop default form creation when ThemeGrill Demo Importer plugin is active.
* Fix - Payment Multiple choices and checkboxes fields amount preview in form builder area.
* Fix - Success message issue with default form due to redirection.
* Fix - Missing Default values for fields in form builder area.
* Fix - Ajax Form Submission Smart Tag Not Working.
* Fix - Format Email Message Content For Signature field.
* Fix - Email Toggle Notification to individual connection.
* Fix - Format Email Message Content for Images and Files uploads.
* Fix - Delete uploaded files after removing Forms or Entries.

= 1.7.4 - 11-03-2021 =
* Fix - Hide empty select data field from entry view.
* Fix - Undefined variable `form_id` on form restriction.
* Fix - jQuery deprecated shorthands shown by jQuery Migrate.
* Fix - Heartbeat notification mangled with display inline-block.
* Fix - Display successful form submission message in preview mode.
* Fix - Entries pictorial design issue and top spacing of search field.
* Fix - Perfect scrollbar throwing uncaught update property due to timeout.
* Fix - Custom and external redirect when Stripe payment form is AJAX enabled.
* Fix - Check valid hash and process custom redirection or success notice after PayPal Payment.